friend page update

--- a/src/pages/friend.astro
+++ b/src/pages/friend.astro
@@ -51,13 +51,13 @@ import { Code } from "astro-expressive-code/components";
                 <span>添加友链说明</span>
               </h2>
               <a
-                href="https://github.com/EveSunMaple/Frosti/edit/main/src/pages/friend.astro"
+                href="https://github.com/xguagua/xguagua-blog/issues"
                 target="_blank"
                 rel="noopener noreferrer"
                 class="btn btn-sm btn-outline btn-primary gap-2"
               >
                 <Icon name="lucide:plus-circle" class="w-4 h-4" />
-                点 Contact 发邮件给我或者发 Github Issue，邮件请用以下模板发送
+                用任何方式或者发 Github Issue 给我，请用以下模板发送
                 
               </a>
               
