--- a/src/pages/friend.astro
+++ b/src/pages/friend.astro
@@ -37,6 +37,13 @@ import { Code } from "astro-expressive-code/components";
               url="https://www.cnblogs.com/Tomori0505"
               type="friend"
             />
+            <FriendCard
+              name="donaldqian"
+              avatar="https://cdn.luogu.com.cn/upload/usericon/1033933.png"
+              description="本质菜比"
+              url="https://www.luogu.com.cn/user/1033933"
+              type="friend"
+            />
           </div>
         </section>
       </div>
