--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -42,8 +42,7 @@ import TimeLine from "@/components/mdx/TimeLine.astro";
         </h2>
         <TimeLine
           items = {[
-            {time: "2025.10.13",event: `删除 Player 功能，加入 Changelog
-            预计本周末完成框架升级`},
+            {time: "2025.10.13",event: "删除 Player 功能，加入 Changelog。预计本周末完成框架升级"},
             {time: "2025.10.14",event: "加入某奇奇怪怪小功能，准备加入最近文章更新功能"},
             {time: "2025.10.20",event: "完成框架升级"}
           ]}
