--- a/src/pages/blog/archives.astro
+++ b/src/pages/blog/archives.astro
@@ -26,7 +26,7 @@ const getMonthName = (month: string): string => {
 };
 
 // 统计总文章数
-const totalPosts = Math.min(allPosts.length,5);
+const totalPosts = allPosts.length;
 ---
 
 <BaseLayout title={t("label.archivePage")}>
