--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -41,7 +41,8 @@ import TimeLine from "@/components/mdx/TimeLine.astro";
           items = {[
             {time: "2025.10.13",event: "删除 Player 功能，加入 Changelog。预计本周末完成框架升级"},
             {time: "2025.10.14",event: "加入某奇奇怪怪小功能，准备加入最近文章更新功能"},
-            {time: "2025.10.20",event: "完成框架升级"}
+            {time: "2025.10.20",event: "完成框架升级"},
+            {time: "2025.10.23",event: "修复遗留问题与框架升级导致的问题"}
           ]}
         />
     </div>
