--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -12,7 +12,7 @@ import TimeLine from "@/components/mdx/TimeLine.astro";
     description="感谢 Frosti Template 与 Cloudflare Pages 让我的 Blog 得以部署"
     textOverlay="Home Page"
     infoIcon="lucide:info"
-    image="/index.jpg"
+    image="/image/index.webp"
   >
     <div class="space-y-8">
         <h2 class="text-2xl font-bold mb-6 flex items-center gap-2">
